--- a/android_app/app/src/main/res/values/strings.xml
+++ b/android_app/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">tns-energo-pnz-app</string>
+    <string name="pin">Введите PIN-код</string>
+    <string name="confirm">Подтвердить</string>
+    <string name="add_inspector">Добавить инспектора</string>
 </resources>
